--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@ h1{color:gray; font-family:verdana}
 
 .maindiv
 {
-    margin: auto; /* Center div on the middle of the screen */
     background-color: white;
     color: black;
     width: 300px;
     padding: 20px; /* Padding creates space around content, inside borders */
-    border: 25px;
+    border-radius: 25px;
+    align: center;
 }
