--- a/style.css
+++ b/style.css
@@ -8,5 +8,5 @@ h1{color:gray; font-family:verdana}
     width: 300px;
     padding: 20px; /* Padding creates space around content, inside borders */
     border-radius: 25px;
-    align: center;
+    margin: auto; /* Align div to center of the page */
 }
