--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ h1{color:gray; font-family:verdana}
     border-radius: 25px;
     margin: auto; /* Align div to center of the page */
 }
+
+.highlight
+{
+    background-color: yellow;
+}
